--- a/MiniDropbox.Web/Web.config
+++ b/MiniDropbox.Web/Web.config
@@ -12,6 +12,9 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="Hostname" value="smtp.mailgun.org" />
+    <add key="Login" value="postmaster@apazminidropbox.mailgun.org" />
+    <add key="Password" value="9gnqlexdcd35" />
   </appSettings>
   <system.web>
     <!--Necesario para autenticacion.-->
