--- a/MiniDropbox.Web/packages.config
+++ b/MiniDropbox.Web/packages.config
@@ -31,6 +31,7 @@
   <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net40" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net40" />
+  <package id="RestSharp" version="104.1" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="2.3.2" targetFramework="net40" />
   <package id="twitter.bootstrap.mvc4" version="1.0.90" targetFramework="net40" />
   <package id="twitter.bootstrap.mvc4.htmlhelpers" version="1.0.90" targetFramework="net40" />
