--- a/MiniDropbox.Domain/MiniDropbox.Domain.csproj
+++ b/MiniDropbox.Domain/MiniDropbox.Domain.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Entities\Account.cs" />
     <Compile Include="Entities\File.cs" />
     <Compile Include="Entities\IEntity.cs" />
+    <Compile Include="Entities\TransaccionesUrl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\IReadOnlyRepository.cs" />
     <Compile Include="Entities\IWriteOnlyRepository.cs" />
