--- a/MiniDropbox.Web/MiniDropbox.Web.csproj
+++ b/MiniDropbox.Web/MiniDropbox.Web.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Models\HomeInputModel.cs" />
     <Compile Include="Models\ListAccountModel.cs" />
     <Compile Include="Models\ResetPasswordModel.cs" />
+    <Compile Include="Models\UpdatePerfilModel.cs" />
     <Compile Include="NavigationRoutes\INavigationRouteFilter.cs" />
     <Compile Include="NavigationRoutes\NamedRoute.cs" />
     <Compile Include="NavigationRoutes\NavigationExtensions.cs" />
@@ -261,6 +262,9 @@
     <Content Include="Views\Account\ForgotPassword.cshtml" />
     <Content Include="Views\ListAccount\ListAccount.cshtml" />
     <Content Include="Views\Account\ResetPassword.cshtml" />
+    <Content Include="Views\Account\UpdatePerfil.cshtml" />
+    <Content Include="Views\Disk\ReadOnly.cshtml" />
+    <Content Include="Views\ListAccount\AccountDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
