--- a/MiniDropbox.Domain/MiniDropbox.Domain.csproj
+++ b/MiniDropbox.Domain/MiniDropbox.Domain.csproj
@@ -42,13 +42,15 @@
     <Compile Include="Entities\Account.cs" />
     <Compile Include="Entities\File.cs" />
     <Compile Include="Entities\IEntity.cs" />
+    <Compile Include="Entities\PaquetesPremium.cs" />
+    <Compile Include="Entities\ReferredUsersList.cs" />
     <Compile Include="Entities\TransaccionesUrl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\IReadOnlyRepository.cs" />
     <Compile Include="Entities\IWriteOnlyRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Services\" />
+    <Folder Include="Entities\Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
