--- a/MiniDropbox.Web/MiniDropbox.Web.csproj
+++ b/MiniDropbox.Web/MiniDropbox.Web.csproj
@@ -275,6 +275,7 @@
     <Content Include="Views\PaquetesPremium\PaquetesPremiunEdit.cshtml" />
     <Content Include="Views\PaquetesPremium\DesactivarPaquetesPremiunEdit.cshtml" />
     <Content Include="Views\PaquetesPremium\CreatePaquete.cshtml" />
+    <Content Include="Views\shared\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
