--- a/MiniDropbox.Domain/MiniDropbox.Domain.csproj
+++ b/MiniDropbox.Domain/MiniDropbox.Domain.csproj
@@ -44,14 +44,13 @@
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\PaquetesPremium.cs" />
     <Compile Include="Entities\ReferredUsersList.cs" />
+    <Compile Include="Entities\Role.cs" />
     <Compile Include="Entities\TransaccionesUrl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entities\IReadOnlyRepository.cs" />
-    <Compile Include="Entities\IWriteOnlyRepository.cs" />
+    <Compile Include="Services\IReadOnlyRepository.cs" />
+    <Compile Include="Services\IWriteOnlyRepository.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entities\Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
