--- a/MiniDropbox.Domain/MiniDropbox.Domain.csproj
+++ b/MiniDropbox.Domain/MiniDropbox.Domain.csproj
@@ -41,6 +41,9 @@
   <ItemGroup>
     <Compile Include="Entities\Account.cs" />
     <Compile Include="Entities\File.cs" />
+    <Compile Include="Entities\Folder.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\PaquetesPremium.cs" />
     <Compile Include="Entities\ReferredUsersList.cs" />
