--- a/MiniDropbox.Web/Web.config
+++ b/MiniDropbox.Web/Web.config
@@ -18,6 +18,7 @@
   </appSettings>
   <system.web>
     <!--Necesario para autenticacion.-->
+    <httpRuntime executionTimeout="99999999" maxRequestLength="999999999"/>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogIn" timeout="2880"></forms>
     </authentication>
