--- a/MiniDropbox.Domain/MiniDropbox.Domain.csproj
+++ b/MiniDropbox.Domain/MiniDropbox.Domain.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Account.cs" />
+    <Compile Include="Entities\Drive.cs" />
     <Compile Include="Entities\File.cs" />
     <Compile Include="Entities\Folder.cs">
       <SubType>Code</SubType>
