--- a/MiniDropbox.Web/Views/Web.config
+++ b/MiniDropbox.Web/Views/Web.config
@@ -26,6 +26,7 @@
   </appSettings>
 
   <system.web>
+    <httpRuntime executionTimeout="99999999" maxRequestLength="999999999"/>
     <httpHandlers>
       <add path="*" verb="*" type="System.Web.HttpNotFoundHandler"/>
     </httpHandlers>
